# rust_study

./: README.md
crate_lazy_static/: Cargo.toml
crate_lazy_static/src/: ._main.rs  main.rs
crate_log/: Cargo.toml
crate_log/src/: ._main.rs  main.rs
crate_rand/: Cargo.toml
crate_rand/src/: main.rs
crate_structopt/: Cargo.toml
crate_structopt/src/: main.rs
file_transfer_stub/: Cargo.toml
file_transfer_stub/src/: main.rs
json_dynamic/: ._target  Cargo.toml
json_dynamic/resource/: input.json
json_dynamic/src/: main.rs
json_static/: Cargo.toml
json_static/resource/: input.json  output.json
json_static/src/: main.rs
minigrep/src/: lib.rs  main.rs
mysql_example/: Cargo.toml
mysql_example/src/: main.rs
num_guess/src/: main.rs
redis_example/: Cargo.toml
redis_example/src/: main.rs
search_xml/: Cargo.toml
search_xml/resource/: test.xhtml
search_xml/src/: main.rs
sqlite_example/: Cargo.toml  students.db
sqlite_example/src/: main.rs
toml_dynamic/: Cargo.toml
toml_dynamic/src/: config.toml  main.rs
toml_static/: Cargo.toml
toml_static/src/: config.toml  main.rs
transformer/: Cargo.toml  config.toml
transformer/db/: students.db
transformer/resource/: data.json  data.xml
transformer/src/: main.rs
xml_example/: Cargo.toml
xml_example/data/: ._example.xml  example.xml
xml_example/src/: main.rs
