[package]
name = "transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "23.0.1"
redis = "0.22.3"
rusqlite = "0.29.0"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
structopt = "0.3.26"
toml = "0.7.3"
xml-rs = "0.8.4"
